# Docker-Django

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: db.sqlite3  requirements.txt
src/core/: entrypoint.sh  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_project_task.py
src/django_docker_demo/: settings.py  urls.py
src/products/: models.py  serializers.py  views.py
src/products/migrations/: 0001_initial.py
