[tool.poetry]
name = "django-docker-demo"
version = "0.1.0"
description = ""
authors = ["waleed <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
djangorestframework = "^3.15"
psycopg = {extras = ["binary"], version = "^3.2.11"}

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"